0.12.4
----------
- Fixed issue with particles if a ship's sprite's alphaMult was set to be greater than 1.

0.12.3
----------
- Fixed issue with mastery effects getting un-applied after replaying a battle.
- Fixed solo replay not creating a battle instance, which could cause crashes with modded battle creation contexts.
- Temporary encounter dialog created for recent battles now copies the existing "core UI", increasing robustness and compatibility with mods that don't use null checks.
- Fixed latent crash issue with flagship tracker that was only being triggered by FSF (no version update, re-download latest version if you're still encountering this).
- Added missing comma in settings json (no version update, re-download latest version if you're still encountering this).

0.12.2
----------
- Fixed potential loading crash issue where persistent data hadn't been loaded yet.

0.12.1
----------
- Masteries that require a ship to earn the "kill credit" for a target are now more lenient
    - As long as a ship damaged a target within 1 second of its destruction, it counts as a kill for the ship.
    - Doesn't apply to the terminator drone mastery, as that requires the drone to deal the killing blow.
- Added NPC indicator hullmods up to mastery level 15.
    - NPC fleets with mastery levels greater than or equal to 15 will show "Level 15+", as was the case before with levels greater than or equal to 9.
- No longer generates masteries for *all* hull specs on game load, now uses a lazy approach where masteries are only generated as necessary.
    - Should substantially improve performance for games with a lot of hull specs and/or games where the maximum level has been configured higher than default.
- No longer generates non-random masteries first in order to preserve input order in configurations with multiple masteries in a level
    - Unwanted duplicates should be handled in RandomMastery by checking generators.